# esp32-web-terminal

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
.github/workflows/: build.yml
certs/: generate_cert.sh
frontend/: index.html  style.css  terminal.js
main/: CMakeLists.txt  auth.c  auth.h  config.c  config.h  gpio_control.c  gpio_control.h  idf_component.yml  main.c  ota_github.c  ota_github.h  serial_port.c  serial_port.h  uart_bridge.c  uart_bridge.h  usb_cdc_bridge.c  usb_cdc_bridge.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
